# pybtexris

./: .coveragerc  .gitignore  CONTRIBUTING.md  LICENSE  README.rst  pyproject.toml
.github/workflows/: coverage.yml
pybtexris/: __init__.py  parsers.py
pybtexris/data/: types.csv
tests/: test_entrypoints.py  test_format.py  test_parsers.py
tests/files/: Knuth1986.bib  Shannon1948.ris  abramowitz+stegun.bib
